Implemetación de los test de integracion - 2025/10/08